2004-10-28  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/bacon-video-widget-gst.c:
	(bacon_video_widget_get_metadata_int):
	  No warnings on console #2.

2004-10-27  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am: upd
	* src/test-parser.c: (header), (test_relative_real),
	(test_relative), (entry_added), (test_parsing_real), (push_parser),
	(test_parsing), (main): add parsing tests to the relative paths ones
	* src/totem-disc.c: (cd_cache_open_mountpoint),
	(cd_cache_file_exists), (cd_cache_disc_is_vcd),
	(cd_cache_disc_is_dvd): speed up DVD and VCD checking by stat()'ing
	for filenames, instead of parsing the subdirectories
	* src/totem-pl-parser.c: (totem_pl_parser_add_directory),
	(totem_pl_parser_parse_internal): check if a directory is a VCD or
	DVD, so that we can launch "totem /path/to/disk/dvd" (Closes: #153750)

2004-10-27  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-xine.c: (xine_event_message): fix a warning
	when a plugin couldn't be loaded because it doesn't exist

============ Version 0.99.20

2004-10-27  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 0.99.20

2004-10-25  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/bacon-video-widget-gst.c:
	(bacon_video_widget_get_metadata_int):
	  Oops, that's kbps, not bps.

2004-10-25  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/bacon-video-widget-gst.c:
	(bacon_video_widget_get_metadata_int):
	  Show bitrate.

2004-10-22  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/bacon-video-widget-gst.c: (got_error):
	  Since we are blocking the mainloop in _play or _open, errors
	  will never be reported until after we unblock the mainloop if we
	  use idle handlers. Also, we don't need signals at that stage. So	
	  we can abuse the coincidence of those two and just report errors
	  as we should.

2004-10-21  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c: (totem_playlist_add_files),
	(totem_playlist_save_files):