@@ -1,3 +1,8 @@
+2004-10-28  Bastien Nocera  <hadess@hadess.net>
+
+	* src/totem-disc.c: (cd_cache_disc_is_cdda): sometimes, CD drives
+	don't implement getting the CD type (should fix #156679)
+
 2004-10-28  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
 	* src/bacon-video-widget-gst.c:
